@@ -7,14 +7,13 @@ import javafx.collections.FXCollections;
 import javafx.collections.ObservableList;
 
 import java.util.ArrayList;
-import java.util.List;
 
 public class Gun extends Arme {
-private ObservableList<Munition> munitionObservableList;
+    private ArrayList<Munition> listemunitions;
 
     public Gun(Joueur j) {
         super(5, j);
-        this.munitionObservableList = FXCollections.observableArrayList();
+        this.listemunitions = new ArrayList<Munition>();
     }
 
    /* public boolean aMuni(){
@@ -36,16 +35,25 @@ private ObservableList<Munition> munitionObservableList;
     }
 */
 
-    public ObservableList<Munition> getMunitionObservableList() {
-        return munitionObservableList;
+    public ArrayList<Munition> getListeMunitions() {
+        return listemunitions;
+    }
+
+    public void setListeMunitions(ArrayList<Munition> listemunitions) {
+        this.listemunitions = listemunitions;
+    }
+
+    public void ajouterMunition(Munition munition) {
+        this.listemunitions.add(munition);
     }
 
     @Override
     public void faireUneAttaque() {
-        if (!this.munitionObservableList.isEmpty()) {
+        if (!this.listemunitions.isEmpty()) {
             // Récupère la première munition de la liste
-            Munition mune = this.munitionObservableList.get(0);
-            System.out.println("Préparation à tirer la munition : " + mune);
+            System.out.println(this.listemunitions);
+            Munition mune = this.listemunitions.getFirst();
+
 
             // Met à jour la position de la munition
             mune.setP(new Position(this.getJoueur().getP().getX(), this.getJoueur().getP().getY()));
@@ -55,18 +63,23 @@ private ObservableList<Munition> munitionObservableList;
             // Ajoute la munition à la liste de munitions du joueur seulement si elle n'y est pas déjà
             if (!this.getJoueur().getMunitionObservableList().contains(mune)) {
                 this.getJoueur().getMunitionObservableList().add(mune);
-                System.out.println("Munition ajoutée à la liste du joueur : " + mune);
+
             } else {
-                System.out.println("Munition déjà présente dans la liste du joueur : " + mune);
+
             }
 
             // Retire la munition de la liste originale
-            this.munitionObservableList.remove(0);
-            System.out.println("Munition retirée de la liste des munitions disponibles : " + mune);
+            this.listemunitions.remove(mune);
+            //retire la munition du sac
+            this.getJoueur().getSac().retireInventaire(mune);
+
         } else {
             System.out.println("tu n'as aucune balle");
         }
     }
 
-
+    @Override
+    public String toString() {
+        return super.toString() + "GUN";
+    }
 }
